[tool.poetry]
name = "aggregate-bot"
version = "0.1.0"
description = ""
authors = ["Nikita <ldc.endoscopy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
motor = "^3.3.1"
aiogram = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
